memperbaiki delay pada nodemon

--- a/13-express-contactApp-2/views/index.ejs
+++ b/13-express-contactApp-2/views/index.ejs
@@ -11,3 +11,8 @@
          <li>kelas : <%= mrd.kelas %> </li>
      </ul>
     <% }) %>
+
+
+    <!-- catatan
+    di terminal ketik nodemon -e js,mjs agar nodemon tidak restart
+    -->
