--- a/17-mongo-contact-2/views/detail.ejs
+++ b/17-mongo-contact-2/views/detail.ejs
@@ -9,7 +9,7 @@
     <div class="card-body">
       <h5 class="card-title"><%= contact.nama %> </h5>
       <p class="card-text"><%= contact.nohp %> </p>
-      <a href="/contact/edit/<%= contact.nama %>" class="btn btn-warning badge" onclick="return confirm('yakin edit')">Edit</a>
+      <a href="/contact/edit/<%= contact._id %>" class="btn btn-warning badge" onclick="return confirm('yakin edit')">Edit</a>
       <!-- <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('yakin hapus')">Hapus</a> -->
       <form action="/contact?_method=DELETE" method="post">
         <input type="hidden" name="_id" value="<%= contact._id %>">
