--- a/17-mongo-contact-2/views/contact.ejs
+++ b/17-mongo-contact-2/views/contact.ejs
@@ -22,7 +22,7 @@
             <tr>
               <th scope="row"><%= i %> </th>
               <td><%= contact.nama %> </td>
-              <td><a href="/contact/<%= contact.nama %> " class="btn btn-success rounded-pill">Detail</a></td>
+              <td><a href="/contact/<%= contact._id %>" class="btn btn-success rounded-pill">Detail</a></td>
             </tr>
           <% }) %>
         </tbody>
